--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: webpage
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: webpage
@@ -27,4 +28,4 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-  type: LoadBalancer
+  type: NodePort
